fixed theme blur not working on safari

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ html {
     display: flex;
     background: #1d1d1ddd;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
 }
 .homeMenu {
     width: calc(100vw - 300px - 50px);
@@ -54,6 +55,7 @@ html {
     height: 100vh;
     background: #1d1d1ddd;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
     overflow: auto;
 }
 
@@ -197,6 +199,7 @@ details {
     justify-content: center;
     margin-left: 300px;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
 }
 .centersection {
     place-items: center;
